--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
+    "resend": "^4.5.2",
     "tailwind-merge": "^3.3.0",
     "three": "^0.177.0"
   },
