--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "resend": "^4.5.2",
     "tailwind-merge": "^3.3.0",
     "three": "^0.177.0"
